deploy/k8s/file2doc-public-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: file2doc-public-ingress
  namespace: file2doc
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/proxy-body-size: 1024m
    nginx.ingress.kubernetes.io/proxy-buffering: "off"
    nginx.ingress.kubernetes.io/proxy-request-buffering: "off"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  ingressClassName: nginx
  rules:
    - host: file2doc.example.com
      http:
        paths:
          - path: /file2doc(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: file2doc
                port:
                  number: 8000
  tls:
    - hosts:
        - file2doc.example.com
      secretName: file2doc-example-com
